added testing to workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,4 +34,8 @@ jobs:
       - name: Run Lint
         run: npm run lint
 
+      # Run tests
+      - name: Run Tests
+        run: npm run test
+
 # test
